--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,3 +10,71 @@
     @apply bg-background text-foreground;
   }
 }
+
+@layer code {
+  .hljs {
+    @apply block overflow-x-auto p-2;
+  }
+
+  .hljs-built_in,
+  .hljs-selector-tag,
+  .hljs-section,
+  .hljs-link {
+    @apply text-[#8be9fd];
+  }
+
+  .hljs-keyword {
+    @apply text-[#cb2439] dark:text-[#ff79c6];
+  }
+
+  .hljs,
+  .hljs-subst {
+    @apply text-black dark:text-[#f8f8f2];
+  }
+
+  .hljs-title,
+  .hljs-attr,
+  .hljs-meta-keyword {
+    @apply italic text-[#5b28b4] dark:text-[#50fa7b];
+  }
+
+  .hljs-string,
+  .hljs-meta,
+  .hljs-name,
+  .hljs-type,
+  .hljs-symbol,
+  .hljs-bullet,
+  .hljs-addition,
+  .hljs-variable,
+  .hljs-template-tag,
+  .hljs-template-variable {
+    @apply text-[#1f762cb4] dark:text-[#f1fa8c];
+  }
+
+  .hljs-comment,
+  .hljs-quote,
+  .hljs-deletion {
+    @apply text-[#6272a4];
+  }
+
+  .hljs-keyword,
+  .hljs-selector-tag,
+  .hljs-literal,
+  .hljs-title,
+  .hljs-section,
+  .hljs-doctag,
+  .hljs-type,
+  .hljs-name,
+  .hljs-strong {
+    @apply font-semibold;
+  }
+
+  .hljs-literal,
+  .hljs-number {
+    @apply text-[#bd93f9];
+  }
+
+  .hljs-emphasis {
+    @apply italic;
+  }
+}
